# nix-heuristic-gc

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  setup.py
.github/workflows/: wheels.yml
nagcpy/: __init__.py  __main__.py  atime.py  fs.py  graph.py
nix_heuristic_gc/: __init__.py  __main__.py  fs.py  graph.py  naive_executor.py  quantity.py
src/: main.cpp
tests/: conftest.py  test_graph.py  test_nix_heuristic_gc.py
