[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "retworkx",
    "humanfriendly",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"

[tool.pytest.ini_options]
testpaths = "tests"
